@@ -1243,6 +1243,10 @@ typedef struct
 #define VID_VLAN_LIST               ((UINT32)622)
 #define VID_TASK_KEY                ((UINT32)623)
 #define VID_TIMER_COUNT             ((UINT32)624)
+#define VID_AUTOBIND_FLAG           ((UINT32)625)
+#define VID_AUTOUNBIND_FLAG         ((UINT32)626)
+#define VID_TIMEOUT                 ((UINT32)627)
+#define VID_PROGRESS                ((UINT32)628)
 
 // Base variabe for single threshold in message
 #define VID_THRESHOLD_BASE          ((UINT32)0x00800000)
