@@ -189,7 +189,7 @@ UINT32 g_dwStartupDelay = 0;
 UINT32 g_dwMaxSessions = 0;
 UINT32 g_longRunningQueryThreshold = 250;
 UINT32 g_dcReconciliationBlockSize = 1024;
-UINT32 g_dcReconciliationTimeout = 300000;
+UINT32 g_dcReconciliationTimeout = 60000;
 UINT32 g_dcMaxCollectorPoolSize = 64;
 UINT32 g_dcOfflineExpirationTime = 10; // 10 days
 UINT32 g_zoneUIN = 0;
